Fix overlapping dropdown options bug in IE

--- a/src/components/form-inputs/Dropdown/index.scss
+++ b/src/components/form-inputs/Dropdown/index.scss
@@ -40,6 +40,7 @@
     overflow: scroll;
   }
   &__option {
+    flex: 1 0 auto;
     background-color: transparent;
     text-align: left;
     cursor: pointer;
